--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ SECRET_KEY=your secret key
 CLUSTER=cluster0.1rwo2t1.mongodb.net
 OPENAI_API_KEY=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
 OPENAI_ORG_ID=org-Mpt8pAge6b1Qb04RS3X71z3p
+AWS_ACCESS_KEY=AKIAWG6GNEJ66DZU4BAN
+AWS_SECRET_KEY=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
+AWS_BUCKET_NAME=pokechatcollections
+AWS_DOMAIN=https://pokechatcollections.s3.amazonaws.com/
