Finished user flow

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ AWS_ACCESS_KEY=AKIAWG6GNEJ66DZU4BAN
 AWS_SECRET_KEY=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
 AWS_BUCKET_NAME=pokechatcollections
 AWS_DOMAIN=https://pokechatcollections.s3.amazonaws.com/
+SENDER_EMAIL=zsy2053@gmail.com
+SENDER_PASSWORD=Tt!6893863
