--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,16 @@
-version: '3.4'
+version: '3.9'
 
 services:
   poke_chat:
-    image: poke_chat
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-      target: debug
+    platform: linux/amd64
+    image: zsy2053/poke_chat
+    container_name: poke_chat
+    build: .
     ports:
-      - 3000:3000
+      - "3000:3000"
     volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
       - .:/src:cached
-    env_file: .env
+    env_file:
+      - .env
