--- a/requirements.txt
+++ b/requirements.txt
@@ -1,158 +1,10 @@
-aiofiles==23.1.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-altair==4.2.2
-aniso8601==9.0.1
-anyio==3.6.2
-asgiref==3.6.0
-async-timeout==4.0.2
-asyncio==3.4.3
-attrs==23.1.0
-backoff==2.2.1
-bcrypt==4.0.1
-beautifulsoup4==4.12.2
-bitarray==2.7.3
-blinker==1.6.2
-boto3==1.26.136
-botocore==1.29.136
-cachetools==5.3.0
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-chromadb==0.3.21
-click==8.1.3
-clickhouse-connect==0.5.23
-cryptography==40.0.2
-cytoolz==0.12.1
-dataclasses-json==0.5.7
-decorator==5.1.1
-dnspython==2.3.0
-duckdb==0.7.1
-entrypoints==0.4
-eth-abi==4.0.0
-eth-account==0.8.0
-eth-hash==0.5.1
-eth-keyfile==0.6.1
-eth-keys==0.4.0
-eth-rlp==0.3.0
-eth-typing==3.3.0
-eth-utils==2.1.0
-fastapi==0.95.1
-filelock==3.12.0
 Flask==2.3.2
-frozenlist==1.3.3
-fsspec==2023.4.0
-gitdb==4.0.10
-GitPython==3.1.31
-greenlet==2.0.2
-greenletio==0.10.1
-grpcio==1.54.0
-grpcio-tools==1.54.0
-gunicorn==20.1.0
-h11==0.14.0
-h2==4.1.0
-hexbytes==0.3.0
-hnswlib==0.7.0
-hpack==4.0.0
-httpcore==0.17.0
-httptools==0.5.0
-httpx==0.24.0
-huggingface-hub==0.14.1
-hyperframe==6.0.1
-idna==3.4
-importlib-metadata==6.6.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.2.0
-jsonschema==4.17.3
-jwt==1.3.1
-langchain==0.0.161
-loguru==0.7.0
-lru-dict==1.1.8
-lz4==4.3.2
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-marshmallow==3.19.0
-marshmallow-enum==1.5.1
-mdurl==0.1.2
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.0.4
-mypy-extensions==1.0.0
-networkx==3.1
-nltk==3.8.1
-numexpr==2.8.4
-numpy==1.24.3
-openai==0.27.6
-openapi-schema-pydantic==1.2.4
-packaging==23.1
-pandas==2.0.1
-parsimonious==0.9.0
-Pillow==9.5.0
-pinecone-client==2.2.1
-PokeChat @ file:///Users/shuyangzang/Desktop/projects/poke_chat
-posthog==3.0.1
-protobuf==4.22.4
-pyarrow==12.0.0
-pycparser==2.21
-pycryptodome==3.17
-pydantic==1.10.7
-pydeck==0.8.1b0
-Pygments==2.15.1
-PyJWT==2.7.0
-pymongo==4.3.3
-Pympler==1.0.1
-pyrsistent==0.19.3
-python-dateutil==2.8.2
+Flask-Cors==3.0.10
 python-dotenv==1.0.0
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-qdrant-client==1.1.6
-regex==2023.3.23
-requests==2.28.2
-rich==13.3.5
-rlp==3.0.0
-s3transfer==0.6.1
-scikit-learn==1.2.2
-scipy==1.10.1
-semantic-kernel==0.2.7.dev0
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
-six==1.16.0
-sklearn==0.0.post5
-smmap==5.0.0
-sniffio==1.3.0
-soupsieve==2.4.1
-SQLAlchemy==2.0.12
-starlette==0.26.1
-sympy==1.11.1
-tenacity==8.2.2
-threadpoolctl==3.1.0
-tiktoken==0.3.3
-tokenizers==0.13.3
-toml==0.10.2
-toolz==0.12.0
-torch==2.0.0
-torchvision==0.15.1
-tornado==6.3.1
-tqdm==4.65.0
-transformers==4.28.1
-typing-inspect==0.8.0
-typing_extensions==4.5.0
-tzdata==2023.3
-tzlocal==4.3
-urllib3==1.26.15
+pymongo==4.3.3
+bcrypt==4.0.1
+pyjwt==2.7.0
 uuid==1.30
-uvicorn==0.22.0
-uvloop==0.17.0
-uWSGI==2.0.21
-validators==0.20.0
-watchfiles==0.19.0
-websockets==11.0.1
-Werkzeug==2.3.4
-wikipedia==1.4.0
-yarl==1.8.2
-zipp==3.15.0
-zstandard==0.21.0
+semantic-kernel
+sentence-transformers==2.2.2
+asyncio==3.4.3
