--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "pyjwt==2.7.0",
     "semantic-kernel",
     "sentence-transformers==2.2.2",
-    "asyncio==3.4.3"
+    "asyncio==3.4.3",
+    "boto3"
 ]
