Added more dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,8 @@ dependencies = [
     "semantic-kernel",
     "sentence-transformers==2.2.2",
     "asyncio==3.4.3",
+    "pandas >= 2.0.1",
+    "numpy",
+    "scikit-learn",
     "boto3"
 ]
