--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 # ...
 dependencies = [
     "Flask == 2.0.2",
-    "Flask-Cors==3.0.10",
+    "Flask-Cors",
     "python-dotenv==1.0.0",
     "pymongo==4.3.3",
     "bcrypt==4.0.1",
