Changed to azure storage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,5 @@ dependencies = [
     "asyncio==3.4.3",
     "pandas >= 2.0.1",
     "numpy",
-    "scikit-learn",
-    "boto3"
+    "scikit-learn"
 ]
