--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pyjwt==2.7.0
 semantic-kernel
 sentence-transformers==2.2.2
 azure-storage-blob
-azure.communication
+azure-communication-email
 pandas
 scikit-learn
 numpy
