--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ dependencies = [
     "semantic-kernel",
     "sentence-transformers==2.2.2",
     "pandas >= 2.0.1",
-    "numpy",
-    "scikit-learn",
-    "azure-storage-blob",
-    "tensorflow"
+    "numpy==1.24.3",
+    "scikit-learn==1.2.2",
+    "azure-storage-blob==12.16.0",
+    "tensorflow>=2.13"
 ]
