--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,8 @@ dependencies = [
     "numpy==1.24.3",
     "scikit-learn==1.2.2",
     "azure-storage-blob==12.16.0",
-    "tensorflow>=2.13"
+    "tensorflow>=2.13",
+    "datasets",
+    "transformers==4.18.0",
+    "sentencepiece"
 ]
