--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ numpy==1.24.3
 scikit-learn==1.2.2
 azure-storage-blob==12.16.0
 tensorflow==2.13.0rc0
+datasets
+transformers==4.18.0
+sentencepiece
