Added rust compiler

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,6 @@ dependencies = [
     "tensorflow>=2.13",
     "datasets",
     "transformers==4.18.0",
-    "sentencepiece"
+    "sentencepiece",
+    "RUST"
 ]
