--- a/.github/workflows/main_style-backend-service.yml
+++ b/.github/workflows/main_style-backend-service.yml
@@ -3,8 +3,7 @@
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
 name: Build and deploy Python app to Azure Web App - style-backend-service
-variables:
-  system.debug: true
+
 on:
   push:
     branches:
@@ -53,7 +52,7 @@ jobs:
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           export PATH="$HOME/.cargo/bin:$PATH"
           rustc --version
-        displayName: Install Rust
+        name: Install Rust
 
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
