--- a/.github/workflows/main_style-backend-service.yml
+++ b/.github/workflows/main_style-backend-service.yml
@@ -49,7 +49,7 @@ jobs:
 
     steps:
       - name: Install Rust
-        shell: |
+        run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           export PATH="$HOME/.cargo/bin:$PATH"
           rustc --version
