--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,5 @@ scikit-learn==1.2.2
 azure-storage-blob==12.16.0
 tensorflow==2.13.0rc0
 datasets
-transformers==4.18.0
+transformers
 sentencepiece
