--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,7 @@ dependencies = [
     "scikit-learn==1.2.2",
     "azure-storage-blob==12.16.0",
     "tensorflow==2.13.0rc0",
-    "transformers"
+    "transformers",
+    "sentencepiece",
+    "datasets"
 ]
