--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ dependencies = [
     "pymongo==4.3.3",
     "bcrypt==4.0.1",
     "pyjwt==2.7.0",
-    "semantic-kernel",
     "sentence-transformers==2.2.2",
     "pandas >= 2.0.1",
     "numpy==1.24.3",
@@ -19,5 +18,6 @@ dependencies = [
     "transformers",
     "sentencepiece",
     "datasets",
-    "accelerate"
+    "accelerate",
+    "langchain"
 ]
