Added audio agent

--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ AZURE_EMAIL_ACCESSKEY=w7QJMF2PNoE3xwwWSqqfWDeFSZANzwOB/2segXBFROeRd0PNVQl/CXA6mD
 GOOGLE_SSO_CLIENT_ID=174069416578-fgb8ks6su101kh793nduk9uqn03u9jpd.apps.googleusercontent.com
 SENDER_EMAIL=zsy2053@gmail.com
 SENDER_PASSWORD=Tt!240798685
+TOKENIZERS_PARALLELISM=False
