--- a/.env
+++ b/.env
@@ -17,5 +17,5 @@ GOOGLE_SSO_CLIENT_ID=174069416578-fgb8ks6su101kh793nduk9uqn03u9jpd.apps.googleus
 SENDER_EMAIL=zsy2053@gmail.com
 SENDER_PASSWORD=Tt!240798685
 TOKENIZERS_PARALLELISM=False
-GOOGLE_REDIRECT_URL=https://www.styleup.fun/google_sign_in
-API_DOMAIN=https://www.styleup.fun
+GOOGLE_REDIRECT_URL=https://witty-glacier-0ff63b30f.3.azurestaticapps.net/google_sign_in
+API_DOMAIN=https://witty-glacier-0ff63b30f.3.azurestaticapps.net
