--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pandas>= 2.0.1
 numpy==1.24.3
 scikit-learn==1.2.2
 azure-storage-blob==12.16.0
-tensorflow==2.13.0rc0
+tensorflow
 datasets
 transformers
 sentencepiece
