--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,10 @@ bcrypt==4.0.1
 pyjwt==2.7.0
 sentence-transformers==2.2.2
 pandas>= 2.0.1
-numpy==1.24.3
+numpy==1.23.*
 scikit-learn==1.2.2
 azure-storage-blob==12.16.0
-tensorflow==2.13.*
+tensorflow==2.12.0
 datasets
 transformers
 sentencepiece
