--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,16 @@ bcrypt==4.0.1
 pyjwt==2.7.0
 sentence-transformers==2.2.2
 pandas>= 2.0.1
-numpy==1.23.*
-scikit-learn==1.2.2
-azure-storage-blob==12.16.0
+numpy
+scikit-learn
+azure-storage-blob
 tensorflow
 datasets
 transformers
 sentencepiece
 accelerate
 langchain
-unstructured==0.7.1
+unstructured
 pdf2image
 tiktoken
 tabulate
