--- a/.env
+++ b/.env
@@ -19,3 +19,8 @@ SENDER_PASSWORD=Tt!240798685
 TOKENIZERS_PARALLELISM=False
 GOOGLE_REDIRECT_URL=https://www.styleup.fun/google_sign_in
 API_DOMAIN=https://www.styleup.fun
+DISCORD_TOKEN=NjE4NTk5OTU3NTEwNzUwMjI5.GUi9o0.AcMXnJj3oUilHZYq53AN_PsuYStLggPcoUq33w
+APPLICATION_ID=936929561302675456
+GUILD_ID=1123301919000121526
+CHANNEL_ID=1123301919901896766
+SESSION_ID=6d3b6029d38d0a17fa20ed70ee360e00
